<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JoBagApplication</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_empleador">MenuEmpleadorActivity</string>
    <string name="inicio_menu">Inicio</string>
    <string name="cerrar_sesion_menu">Cerrar Sesión</string>
    <string name="suscripcion_empleador_menu">Suscripción</string>
    <string name="perfil_empleador_menu">Perfil</string>
    <string name="cuenta_empleador_menu">Mi Cuenta</string>
    <string name="anuncios_empleador_menu">Mis Anuncios</string>
    <string name="crear_entrevistas_empleador_menu">Crear Entrevistas</string>
    <string name="entrevistas_pendientes_empleador_menu">Entrevistas Pendientes</string>
    <string name="Link_Entrevista">https://meet.google.com/end-drxc-prn</string>
    <string name="oferta_laboral">Oferta Laboral</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha_publicacion">Fecha de Publicacion</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="salario">Salario</string>
    <string name="direccion">Direccion</string>
    <string name="perfil_empleador">PERFIL EMPLEADOR</string>
    <string name="nombres_apellidos">Nombres y Apellidos</string>
    <string name="email">Email</string>
    <string name="n_telefonico">N° Telefonico</string>
    <string name="n_documento">N° Documento</string>
    <string name="posicion">Posicion</string>
    <string name="crear_anuncio">Crear Anuncio</string>
    <string name="entrevistas_programadas">Entrevistas Programadas</string>
    <string name="postulante">POSTULANTE</string>
    <string name="empleador">EMPLEADOR</string>
    <string name="bienvenido_a_jobag_login">Bienvenido a JoBag. Login</string>
    <string name="no_tienes_cuenta_ingresa_aqu">¿No tienes cuenta? Ingresa aquí</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="password">Password</string>
    <string name="bienvenidor_empleador_login">Bienvenidor empleador. Login</string>
    <string name="busqueda_de_empleos">BUSQUEDA DE EMPLEOS</string>
    <string name="empieza_a_buscar_un_nuevo_empleo">Empieza a buscar un nuevo empleo</string>
    <string name="puesto_empresa_o_palabra_clave">Puesto, empresa o palabra clave</string>
    <string name="bienvenidor_postulante_login">Bienvenidor postulante. Login</string>
    <string name="nombres">Nombres</string>
    <string name="he_le_do_y_acepto_los_t_rminos_y_condiciones_de_jo_bag">He leído y acepto los términos y condiciones de Jo-Bag</string>
    <string name="apellidos">Apellidos</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="ruc">RUC</string>
    <string name="nombre_de_la_empresa">Nombre de la Empresa</string>
    <string name="suscripcion">SUSCRIPCION</string>
    <string name="suscripcion_activity">Suscripcion</string>
    <string name="estado">Estado</string>
    <string name="fecha_de_adquisicion">Fecha de Adquisicion</string>
    <string name="fecha">fecha</string>
    <string name="buscar">BUSCAR</string>
    <string name="b_squeda_de_empleo">BÚSQUEDA DE EMPLEO</string>
    <string name="b_squeda_de_empleos">BÚSQUEDA DE EMPLEOS</string>
    <string name="b_squeda_de_empleos_2">BÚSQUEDA DE EMPLEOS</string>
    <string name="buscar3">BUSCAR</string>
    <string name="crear_nuevo_anuncio_de_trabajo" />
    <string name="puesto" />
    <string name="publicar" />
    <string name="tipo" />
    <string name="experiencia" />
    <string name="t_tulo" />
    <string name="sueldo" />
    <string name="lugar" />
    <string name="descripcionCAE" />
    <string name="descripci_n">Descripción</string>
    <string name="lugarCAE">Lugar</string>
    <string name="sueldoCEA">Sueldo</string>
    <string name="t_tuloCEA">Título</string>
    <string name="experienciaCEA">Experiencia</string>
    <string name="tipoCEA">Tipo</string>
    <string name="puestoCEA">Puesto</string>
    <string name="publicarCEA">Publicar</string>
    <string name="desarrollador_backend_c">Desarrollador Backend C#</string>
    <string name="part_time">Part Time</string>
    <string name="santiago_de_surco_lima">Santiago de Surco, Lima</string>
    <string name="practicante_java">Practicante Java</string>
    <string name="backus">Backus</string>
    <string name="claro" tools:ignore="DuplicateDefinition">Claro</string>
    <string name="full_time" tools:ignore="DuplicateDefinition">Full Time</string>
    <string name="publicado_el_22_de_mayo">Publicado el 22 de mayo</string>
    <string name="san_borja_lima">San Borja, Lima</string>
    <string name="desarrollador_frontend">Desarrollador Frontend</string>
    <string name="san_isidro_lima">San Isidro, Lima</string>
    <string name="publicado_el_10_de_enero">Publicado el 10 de enero</string>
    <string name="publicado_el_5_de_abril">Publicado el 5 de abril</string>
    <string name="sueldo_no_especificado">Sueldo No Especificado</string>
    <string name="detalles_del_aviso">Detalles del Aviso</string>
    <string name="nuestro_cliente_en_tecnolog_a_de_la_informaci_n_con_m_s_de_39_a_os_en_el_sector_enfocado_en_proyectos_de_medio_de_pago_pos_se_encuentra_en_b_squeda_de_un_programador_front_end_requisitos_experiencia_en_angular_nivel_avanzado_en_html5_css3_javascript_jquery_experiencia_en_creaci_n_de_mockups_wireframe_y_prototipos_experiencia_en_consumo_api_rest_experiencia_ux_opcional_conocimiento_git_ofrecemos_ingreso_a_planilla_trabajo_remoto">Nuestro cliente en tecnología de la información con más de 39 años en el sector, enfocado en proyectos de Medio de Pago - POS. Se encuentra en búsqueda de un PROGRAMADOR FRONT END Requisitos: - Experiencia en Angular - Nivel avanzado en HTML5, CSS3, JavaScript, JQuery - Experiencia en creación de mockups, wireframe y prototipos - Experiencia en consumo API REST - Experiencia UX (Opcional) - Conocimiento GIT Ofrecemos: • Ingreso a planilla • Trabajo remoto.</string>
    <string name="postular">POSTULAR</string>
    <string name="proceder_al_proceso_de_postulaci_n">Proceder al proceso de postulación</string>
    <string name="aceptar">Aceptar</string>
    <string name="adjunta_tu_hoja_de_vida_detallando_informaci_n_relevante_para_el_puesto_de_trabajo_al_que_postulas">Adjunta tu hoja de vida detallando información relevante para el puesto de trabajo al que postulas</string>
    <string name="seleccionar_archivo">Seleccionar archivo</string>
    <string name="todo">TODO</string>
    <string name="agrega_un_video_selfie_de_presentaci_n_personal_para_conocer_m_s_sobre_tus_aptitudes_y_experiencia">Agrega un video selfie de presentación personal para conocer más sobre tus aptitudes y experiencia.</string>
    <string name="declaro_que_toda_la_informaci_n_enviada_es_completamente_ver_dica_y_acepto_las_consecuencias_respectivas_establecidas_por_la_ley_por_la_falsificaci_n_de_las_mismas_de_ser_el_caso">Declaro que toda la información enviada es completamente verídica y acepto las consecuencias respectivas establecidas por la ley por la falsificación de las mismas de ser el caso.</string>
    <string name="acepto">ACEPTO</string>
    <string name="postulaci_n_enviada_con_xito">Postulación enviada con éxito</string>
</resources>