<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainEmpleadorActivity">

    <item
        android:id="@+id/Inicio_Empleador"
        android:title="@string/inicio_menu" />

    <item
        android:id="@+id/Anuncios_Empleador"
        android:title="@string/anuncios_empleador_menu"/>

    <item
        android:id="@+id/Anuncios_Empleador_Crear"
        android:title="@string/crear_anuncio"/>

    <item
        android:id="@+id/Entrevistas_Empleador_Pendientes"
        android:title="@string/entrevistas_programadas"/>

    <item
        android:id="@+id/Perfil_Empleador"
        android:title="@string/perfil_empleador_menu"/>

    <item
        android:id="@+id/Suscripcion_Empleador"
        android:title="@string/suscripcion_empleador_menu"/>

    <item
        android:id="@+id/Cerrar_Sesion"
        android:title="@string/cerrar_sesion_menu"/>
</menu>