<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jobag_avatar"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/bt_Login_Postulante"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/postulante"
        android:backgroundTint="#1955AE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bt_Login_Empleador"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:text="@string/empleador"
        android:backgroundTint="#1955AE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/bt_Login_Postulante"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="233dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:text="@string/bienvenido_a_jobag_login"
        android:textAlignment="center"
        android:textColor="#1955AE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tv_CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/no_tienes_cuenta_ingresa_aqu"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Login_Postulante" />
</androidx.constraintlayout.widget.ConstraintLayout>