<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Postulante.LoginActivityPostulante">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="183dp"
        android:layout_height="190dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jobag_avatar"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/et_password_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="57dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#938C8C"
        android:textColorHint="#938C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_p"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/bt_Register_p"
        android:layout_width="245dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/registrarse"
        android:textColor="#1955AE"
        android:textColorHint="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Login_p" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/bienvenidor_postulante_login"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_Login_p"
        android:layout_width="245dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#1955AE"
        android:shadowRadius="@integer/material_motion_duration_short_1"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_p"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_email_p"
        android:layout_width="298dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#938C8C"
        android:textColorHint="#938C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>